[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []
[tool.poetry]
name = "weather-impression"
version = "0.1.0"
description = ""
authors = ["Lucas Recknagel <lucas91@me.com>"]
readme = "README.md"
packages = [{include = "weather_impression"}]

[tool.poetry.dependencies]
python = "^3.11"
Pillow = "^9.5.0"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
gpiod = "^1.5.3"
schedule = "^1.2.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
